# 2CCPP-Project

./: CMakeLists.txt  README.md  main.cpp
headers/: Board.h  Button.h  CMakeLists.txt  CheckBox.h  Game.h  GameState.h  GameStates.h  GameStatesList.h  IState.h  Player.h  Players.h  RaylibWrapper.h  Settings.h  ThreadHandler.h  Tile.h  TileQueue.h  Vec2.h
headers/GameEngine/: RaylibWrapper.h
headers/GameObjects/: Board.h  Cell.h  Game.h  Player.h  Players.h  Tile.h  Tiles.h
headers/UI/: Button.h  CheckBox.h  ColorChoice.h  NumberChoice.h  PlayersChoice.h
headers/Utilities/: Vec2.h
src/: Board.cpp  Button.cpp  CMakeLists.txt  CheckBox.cpp  Game.cpp  GameStates.cpp  GameStatesList.cpp  Player.cpp  Players.cpp  RaylibWrapper.cpp  ThreadHandler.cpp  Tile.cpp  TileQueue.cpp  Tiles.cpp
src/GameEngine/: RaylibWrapper.cpp  ThreadHandler.cpp
src/GameObjects/: Board.cpp  Cell.cpp  Game.cpp  Player.cpp  Players.cpp  Tile.cpp  Tiles.cpp
src/UI/: Button.cpp  CheckBox.cpp  ColorChoice.cpp  NumberChoice.cpp  PlayersChoice.cpp
